--- a/signup.html
+++ b/signup.html
@@ -17,9 +17,9 @@
     function gtag() {
       dataLayer.push(arguments);
     }
-    gtag("js", new Date());
+    gtag('js', new Date());
 
-    gtag("config", "G-953ZVVDGF3");
+    gtag('config', 'G-953ZVVDGF3');
   </script>
   <body>
     <div class="signup_background page_background">
